welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: value poseBrosse
def marquerSol() {baisseBrosse();poseBrosse()}
                                 ^MethodsPicture:7: error: not found: value color
  faireV(color.yellow)
         ^MethodsPicture:8: error: not found: value color
  faireV(color.red)
         ^MethodsPicture:9: error: not found: value color
  faireV(color.blue)
         ^MethodsPicture:10: error: not found: value color
  faireV(color.green)}
         ^MethodsPicture:29: error: not found: value transition2
  for (compteur5 <- 1 to 3) {motif2();transition2()}
                                      ^